tests/fail/union_fun_call.py
def foo(x: float | int) -> float | int:
    return x


foo(False)
